turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:4: error: value toDouple is not a member of Int
    droite(360.toDouple/7)}
               ^